[package]
name = "blazar"
version = "1.0.0-dev.1"
authors = ["Mickaël Malécot <mickael.malecot@gmail.com>"]
edition = "2018"
description = "Simple and lite game engine"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["game", "engine"]
categories = ["game-engines"]
homepage = "https://github.com/mmalecot/blazar"
documentation = "https://docs.rs/blazar"
repository = "https://github.com/mmalecot/blazar"
exclude = [".github/*", "examples/*"]

[workspace]
members = [
    # Internal
    "blazar_dl",
    "blazar_libc",
    "blazar_winapi",
    "blazar_xlib",
    "blazar_xlib_dl",
    # Re-exports
    "blazar_event",
    "blazar_window",
]

[profile.release]
lto = true

[dependencies]
blazar_event = { path = "blazar_event" }
blazar_window = { path = "blazar_window" }
