[package]
name = "blazar_library"
version = "0.1.0"
authors = ["Mickaël Malécot <mickael.malecot@gmail.com>"]
edition = "2018"

[target.'cfg(target_family = "unix")'.dependencies]
blazar_dl = { path = "../blazar_dl" }

[target.'cfg(target_family = "windows")'.dependencies]
blazar_win32 = { path = "../blazar_win32" }
