[package]
name = "blazar_window"
version = "1.0.0-dev.1"
authors = ["Mickaël Malécot <mickael.malecot@gmail.com>"]
edition = "2018"
description = "Multi-platform windowing API"
license = "MIT/Apache-2.0"
repository = "https://github.com/mmalecot/blazar"

[target.'cfg(target_os = "linux")'.dependencies]
blazar_xlib_sys = { path = "../blazar_xlib_sys" }
blazar_xlib_dl = { path = "../blazar_xlib_dl" }

[target.'cfg(target_os = "windows")'.dependencies]
blazar_winapi_sys = { path = "../blazar_winapi_sys" }

[dependencies]
blazar_event = { path = "../blazar_event" }
blazar_vk_dl = { path = "../blazar_vk_dl" }
